test/assets/invalid/signatures/expect-return-bool.hs
a :: Int -> Int
a x = (mod x 2) == 1